Improve stop-loss ack handling